--- a/templates/index.html
+++ b/templates/index.html
@@ -12,163 +12,206 @@
 <div class="container">
     <h1 class="my-4">Twitter Auto Post</h1>
 
-    <h2>アカウント選択</h2>
-    <form action="/select_account" method="post" class="form-inline">
-        <div class="form-group">
-            <label for="account_id" class="mr-2">アカウント:</label>
-            <select name="account_id" id="account_id" class="form-control" onchange="this.form.submit()">
-                {% for account in accounts %}
-                    <option value="{{ account[0] }}" {% if account[0] == current_account_id %}selected{% endif %}>{{ account[1] }}</option>
-                {% endfor %}
-            </select>
-        </div>
-    </form>
+    <!-- ナビゲーションバーの追加 -->
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" href="#select-account" data-toggle="tab">アカウント選択</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#register-account" data-toggle="tab">アカウント登録</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#auto-post" data-toggle="tab">自動投稿</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#settings" data-toggle="tab">設定</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#csv-upload" data-toggle="tab">CSV</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#messages" data-toggle="tab">メッセージ</a>
+        </li>
+    </ul>
 
-    <h2 class="mt-4">アカウント情報編集</h2>
-    {% if current_account %}
-    <form action="/edit_account" method="post">
-        <div class="form-group">
-            <label>アカウント名:</label>
-            <input type="text" name="name" class="form-control" value="{{ current_account[1] }}" required>
-        </div>
-        <div class="form-group">
-            <label>Consumer API Key:</label>
-            <input type="text" name="consumer_api_key" class="form-control" value="{{ current_account[2] }}" required>
-        </div>
-        <div class="form-group">
-            <label>Consumer API Secret:</label>
-            <input type="text" name="consumer_api_secret" class="form-control" value="{{ current_account[3] }}" required>
-        </div>
-        <div class="form-group">
-            <label>Bearer Token:</label>
-            <input type="text" name="bearer_token" class="form-control" value="{{ current_account[4] }}" required>
-        </div>
-        <div class="form-group">
-            <label>Access Token:</label>
-            <input type="text" name="access_token" class="form-control" value="{{ current_account[5] }}" required>
-        </div>
-        <div class="form-group">
-            <label>Access Token Secret:</label>
-            <input type="text" name="access_token_secret" class="form-control" value="{{ current_account[6] }}" required>
-        </div>
-        <button type="submit" class="btn btn-primary">更新</button>
-    </form>
-    {% endif %}
+    <!-- タブの内容 -->
+    <div class="tab-content">
+        <!-- アカウント選択タブ -->
+        <div id="select-account" class="tab-pane fade show active">
+            <h2>アカウント選択</h2>
+            <form action="/select_account" method="post" class="form-inline">
+                <div class="form-group">
+                    <label for="account_id" class="mr-2">アカウント:</label>
+                    <select name="account_id" id="account_id" class="form-control" onchange="this.form.submit()">
+                        {% for account in accounts %}
+                            <option value="{{ account[0] }}" {% if account[0] == current_account_id %}selected{% endif %}>{{ account[1] }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </form>
 
-    <h2 class="mt-4">アカウント登録</h2>
-    <form action="/register_account" method="post">
-        <div class="form-group">
-            <label>アカウント名:</label>
-            <input type="text" name="name" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label>Consumer API Key:</label>
-            <input type="text" name="consumer_api_key" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label>Consumer API Secret:</label>
-            <input type="text" name="consumer_api_secret" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label>Bearer Token:</label>
-            <input type="text" name="bearer_token" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label>Access Token:</label>
-            <input type="text" name="access_token" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label>Access Token Secret:</label>
-            <input type="text" name="access_token_secret" class="form-control" required>
-        </div>
-        <button type="submit" class="btn btn-success">登録</button>
-    </form>
-
-    <h2 class="mt-4">自動投稿</h2>
-    <p>{{ '自動投稿実行中' if is_auto_posting else '自動投稿停止中' }}</p>
-
-    <form action="/start_auto_post" method="get" class="mb-2">
-        <button type="submit" class="btn btn-info">自動投稿開始</button>
-    </form>
-
-    <form action="/stop_auto_post" method="get"> 
-        <button type="submit" class="btn btn-danger">自動投稿停止</button> 
-    </form>
-
-    <h2 class="mt-4">投稿間隔の設定</h2>
-    <form action="/set_interval" method="post">
-        <div class="form-group">
-            <label for="interval-type">設定タイプを選択:</label>
-            <select id="interval-type" name="interval_type" class="form-control" onchange="toggleIntervalType()">
-                <option value="interval" {% if interval_type == 'interval' %}selected{% endif %}>時間間隔</option>
-                <option value="specific" {% if interval_type == 'specific' %}selected{% endif %}>時間指定</option>
-            </select>
+            <h2 class="mt-4">アカウント情報編集</h2>
+            {% if current_account %}
+            <form action="/edit_account" method="post">
+                <div class="form-group">
+                    <label>アカウント名:</label>
+                    <input type="text" name="name" class="form-control" value="{{ current_account[1] }}" required>
+                </div>
+                <div class="form-group">
+                    <label>Consumer API Key:</label>
+                    <input type="text" name="consumer_api_key" class="form-control" value="{{ current_account[2] }}" required>
+                </div>
+                <div class="form-group">
+                    <label>Consumer API Secret:</label>
+                    <input type="text" name="consumer_api_secret" class="form-control" value="{{ current_account[3] }}" required>
+                </div>
+                <div class="form-group">
+                    <label>Bearer Token:</label>
+                    <input type="text" name="bearer_token" class="form-control" value="{{ current_account[4] }}" required>
+                </div>
+                <div class="form-group">
+                    <label>Access Token:</label>
+                    <input type="text" name="access_token" class="form-control" value="{{ current_account[5] }}" required>
+                </div>
+                <div class="form-group">
+                    <label>Access Token Secret:</label>
+                    <input type="text" name="access_token_secret" class="form-control" value="{{ current_account[6] }}" required>
+                </div>
+                <button type="submit" class="btn btn-primary">更新</button>
+            </form>
+            {% endif %}
         </div>
 
-        <div id="interval-input" class="form-group interval-setting {% if interval_type != 'interval' %}hidden{% endif %}">
-            <label>投稿間隔 (時間):</label>
-            <input type="number" name="interval" class="form-control" placeholder="投稿間隔(時間)" min="1" value="{{ interval }}">
+        <!-- アカウント登録タブ -->
+        <div id="register-account" class="tab-pane fade">
+            <h2 class="mt-4">アカウント登録</h2>
+            <form action="/register_account" method="post">
+                <div class="form-group">
+                    <label>アカウント名:</label>
+                    <input type="text" name="name" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label>Consumer API Key:</label>
+                    <input type="text" name="consumer_api_key" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label>Consumer API Secret:</label>
+                    <input type="text" name="consumer_api_secret" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label>Bearer Token:</label>
+                    <input type="text" name="bearer_token" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label>Access Token:</label>
+                    <input type="text" name="access_token" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label>Access Token Secret:</label>
+                    <input type="text" name="access_token_secret" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-success">登録</button>
+            </form>
         </div>
 
-        <div id="specific-input" class="form-group interval-setting {% if interval_type != 'specific' %}hidden{% endif %}">
-            <label>時間指定:</label>
-            {% for time in specific_times %}
-                <div class="input-group mb-2">
-                    <input type="time" name="specific_times" class="form-control" value="{{ time }}">
+        <!-- 自動投稿タブ -->
+        <div id="auto-post" class="tab-pane fade">
+            <h2 class="mt-4">自動投稿</h2>
+            <p>{{ '自動投稿実行中' if is_auto_posting else '自動投稿停止中' }}</p>
+            <form action="/start_auto_post" method="get" class="mb-2">
+                <button type="submit" class="btn btn-info">自動投稿開始</button>
+            </form>
+            <form action="/stop_auto_post" method="get">
+                <button type="submit" class="btn btn-danger">自動投稿停止</button>
+            </form>
+        </div>
+
+        <!-- 設定タブ -->
+        <div id="settings" class="tab-pane fade">
+            <h2 class="mt-4">投稿間隔の設定</h2>
+            <form action="/set_interval" method="post">
+                <div class="form-group">
+                    <label for="interval-type">設定タイプを選択:</label>
+                    <select id="interval-type" name="interval_type" class="form-control" onchange="toggleIntervalType()">
+                        <option value="interval" {% if interval_type == 'interval' %}selected{% endif %}>時間間隔</option>
+                        <option value="specific" {% if interval_type == 'specific' %}selected{% endif %}>時間指定</option>
+                    </select>
+                </div>
+
+                <div id="interval-input" class="form-group interval-setting {% if interval_type != 'interval' %}hidden{% endif %}">
+                    <label>投稿間隔 (時間):</label>
+                    <input type="number" name="interval" class="form-control" placeholder="投稿間隔(時間)" min="1" value="{{ interval }}">
+                </div>
+
+                <div id="specific-input" class="form-group interval-setting {% if interval_type != 'specific' %}hidden{% endif %}">
+                    <label>時間指定:</label>
+                    {% for time in specific_times %}
+                        <div class="input-group mb-2">
+                            <input type="time" name="specific_times" class="form-control" value="{{ time }}">
+                            <div class="input-group-append">
+                                <button type="button" class="btn btn-outline-danger" onclick="removeSpecificTime('{{ time }}')">削除</button>
+                            </div>
+                        </div>
+                    {% endfor %}
+                    {% for _ in range(5 - specific_times|length) %}
+                        <div class="input-group mb-2">
+                            <input type="time" name="specific_times" class="form-control">
+                        </div>
+                    {% endfor %}
+                </div>
+                
+                <button type="submit" class="btn btn-primary">設定を保存</button>
+            </form>
+
+            <h2 class="mt-4">現在の設定</h2>
+            <p>{{ current_setting }}</p>
+        </div>
+
+        <!-- CSVアップロードタブ -->
+        <div id="csv-upload" class="tab-pane fade">
+            <h2 class="mt-4">CSV</h2>
+            <form action="/upload" method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <input type="file" name="file" class="form-control-file" accept=".csv">
+                </div>
+                <button type="submit" class="btn btn-primary">CSVをアップロード</button>
+            </form>
+        </div>
+
+        <!-- メッセージタブ -->
+        <div id="messages" class="tab-pane fade">
+            <h2 class="mt-4">メッセージ追加</h2>
+            <form action="/post" method="post">
+                <div class="input-group mb-3">
+                    <input type="text" name="message" class="form-control" placeholder="メッセージを入力">
                     <div class="input-group-append">
-                        <button type="button" class="btn btn-outline-danger" onclick="removeSpecificTime('{{ time }}')">削除</button>
+                        <button type="submit" class="btn btn-primary">メッセージを追加</button>
                     </div>
                 </div>
-            {% endfor %}
-            {% for _ in range(5 - specific_times|length) %}
-                <div class="input-group mb-2">
-                    <input type="time" name="specific_times" class="form-control">
-                </div>
-            {% endfor %}
-        </div>
-        
-        <button type="submit" class="btn btn-primary">設定を保存</button>
-    </form>
+            </form>
 
-    <h2 class="mt-4">現在の設定</h2>
-    <p>{{ current_setting }}</p>
+            <h2 class="mt-4">メッセージ一括削除</h2>
+            <form action="/delete_all_messages" method="post" class="mt-3"> 
+                <button type="button" class="btn btn-danger" onclick="deleteAllMessages()">すべてのメッセージを削除</button>
+            </form>
 
-    <h2 class="mt-4">CSV</h2>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-        <div class="form-group">
-            <input type="file" name="file" class="form-control-file" accept=".csv">
+            <h2 class="mt-4">メッセージ一覧</h2>
+            <ul id="message-list" class="list-group">
+                {% for id, message, is_deleted in messages %}
+                    <li class="list-group-item {{ 'deleted' if is_deleted else '' }}" data-id="{{ id }}">
+                        <span class="message-text">{{ message }}</span> {% if is_deleted %}(投稿済み){% endif %}
+                        <button class="btn btn-sm btn-warning edit-btn" onclick="editMessage('{{ id }}')">編集</button>
+                        <button class="btn btn-sm btn-danger delete-btn" onclick="deleteMessage('{{ id }}');">削除</button>
+                        <form action="/edit/{{ id }}" method="post" class="edit-form" id="editForm-{{ id }}" style="display:none;">
+                            <input type="text" name="new_message" class="form-control d-inline w-75" value="{{ message }}" placeholder="新しいメッセージ" style="display: none;">
+                            <button type="submit" class="btn btn-sm btn-primary" style="display: none;">更新</button>
+                            <button type="button" class="btn btn-sm btn-secondary" style="display: none;" onclick="cancelEdit('{{ id }}')">キャンセル</button>
+                        </form>
+                    </li>
+                {% endfor %}
+            </ul>
         </div>
-        <button type="submit" class="btn btn-primary">CSVをアップロード</button>
-    </form>
-
-    <h2 class="mt-4">メッセージ追加</h2>
-    <form action="/post" method="post">
-        <div class="input-group mb-3">
-            <input type="text" name="message" class="form-control" placeholder="メッセージを入力">
-            <div class="input-group-append">
-                <button type="submit" class="btn btn-primary">メッセージを追加</button>
-            </div>
-        </div>
-    </form>
-    
-    <h2 class="mt-4">メッセージ一覧</h2>
-    <ul id="message-list" class="list-group">
-        {% for id, message, is_deleted in messages %}
-            <li class="list-group-item {{ 'deleted' if is_deleted else '' }}" data-id="{{ id }}">
-                <span class="message-text">{{ message }}</span> {% if is_deleted %}(投稿済み){% endif %}
-                <button class="btn btn-sm btn-warning edit-btn" onclick="editMessage('{{ id }}')">編集</button>
-                <button class="btn btn-sm btn-danger delete-btn" onclick="deleteMessage('{{ id }}'); ">削除</button>
-                <form action="/edit/{{ id }}" method="post" class="edit-form" id="editForm-{{ id }}"
-                    style="display:none;">
-                    <input type="text" name="new_message" class="form-control d-inline w-75" value="{{ message }}"
-                        placeholder="新しいメッセージ" style="display: none;">
-                    <button type="submit" class="btn btn-sm btn-primary" style="display: none;">更新</button>
-                    <button type="button" class="btn btn-sm btn-secondary" style="display: none;"
-                        onclick="cancelEdit('{{ id }}')">キャンセル</button>
-                </form>
-            </li>
-        {% endfor %}
-    </ul>
+    </div>
 
     {% with messages = get_flashed_messages() %}
       {% if messages %}
